# CarbonCpu

./: README.md  client.conf  client_cpu.py  daemon.py  requirements.txt  setup.cfg
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
server/: settings.py  urls.py
templates/: base.html  index.html
templates/includes/: footer.html  nav.html
userside/: views.py
